--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,7 +1,30 @@
 {
-    "snippets.userSnippetsDirectory": "~/.config/nvim/snippets",
-    //"suggest.autoTrigger":"none", //Autocompletion suggestions
-    "signature.enable": false // The floating documentation window
-    //"diagnostic.messageTarget": "echo", //The floating error windows
-    //"suggest.floatEnable": false
+  "languageserver": {
+    "sourcery": {
+      "command": "/home/larrylime/.local/bin/sourcery",
+      "args": [
+        "lsp"
+      ],
+      "filetypes": [
+        "python"
+      ],
+      "initializationOptions": {
+        "token": "user_t3_0QDCtej6yVfc3hdBu9eVkEVY7HcgL6J8IolTUZH_pb4zkavmHqWqOT5Y",
+        "extension_version": "coc.vim",
+        "editor_version": "vim"
+      },
+      "settings": {
+        "sourcery": {
+          "metricsEnabled": true
+        }
+      }
+    }
+  },
+"python.formatting.autopep8Path": "/home/larrylime/.local/bin/autopep8",
+//"snippets.userSnippetsDirectory": "~/.config/nvim/snippets",
+//"suggest.autoTrigger":"none", //Autocompletion suggestions
+"signature.enable": false // The floating documentation window
+//"diagnostic.messageTarget": "echo" //The floating error windows
+//"suggest.floatEnable": false
 }
+
